syntax = "proto3";

package bytebase.store;

import "store/instance_change_history.proto";

option go_package = "generated-go/store";

message ChangelogPayload {
  // Format: projects/{project}/rollouts/{rollout}/stages/{stage}/tasks/{task}/taskruns/{taskrun}
  string task_run = 1;
  // Format: projects/{project}/issues/{issue}
  string issue = 2;

  // The revision uid.
  // optional
  int64 revision = 3;

  ChangedResources changed_resources = 4;

  // The sheet that holds the content.
  // Format: projects/{project}/sheets/{sheet}
  string sheet = 5;

  string version = 6;

  enum Type {
    TYPE_UNSPECIFIED = 0;
    BASELINE = 1;
    MIGRATE = 2;
    MIGRATE_SDL = 3;
    MIGRATE_GHOST = 4;
    DATA = 6;
  }
  Type type = 7;
}
